--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -82,7 +82,7 @@ jobs:
           docker-compose -f docker-compose.generate.yml up
                    
       - name: Create Pull Request
-        if: env.STACH_CHANGES == 1
+        if: env.STACH_CHANGES == 2
         uses: peter-evans/create-pull-request@v3
         with:
           commit-message: "feat(stachschema-sdks): Auto generated commit from the stachschema PR ${{ github.event.number }}"
@@ -100,4 +100,16 @@ jobs:
           assignees: ${{ github.actor }}
           draft: false
 
+      - name: Create pull request
+        if: env.STACH_CHANGES == 1
+        uses: gr2m/create-or-update-pull-request-action@v1.x
+        env:
+          GITHUB_TOKEN: ${{ secrets.USER_API_KEY }}
+        with:
+          title: "Auto generated PR from the stachschema PR ${{ github.event.number }}"
+          body: "Auto generated PR from the stachschema PR ${{ github.event.number }}"
+          branch: "feat/stachschema-sdks/stachschema-pr-${{ github.event.number }}"
+          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          path: "stachschema-sdks/"
+          commit-message: "feat(stachschema-sdks): Auto generated commit from the stachschema PR ${{ github.event.number }}"
 
