--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -82,9 +82,10 @@ jobs:
           docker-compose -f docker-compose.generate.yml up
                    
       - name: Create Pull Request
-        if: env.STACH_CHANGES == 2
+        if: env.STACH_CHANGES == 1
         uses: peter-evans/create-pull-request@v3
         with:
+          path: "stachschema-sdks"
           commit-message: "feat(stachschema-sdks): Auto generated commit from the stachschema PR ${{ github.event.number }}"
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
@@ -101,7 +102,7 @@ jobs:
           draft: false
 
       - name: Create pull request
-        if: env.STACH_CHANGES == 1
+        if: env.STACH_CHANGES == 2
         uses: gr2m/create-or-update-pull-request-action@v1.x
         env:
           GITHUB_TOKEN: ${{ secrets.USER_API_KEY }}
